@@ -842,6 +842,9 @@ static void print_results(ThreadId tid, Bool is_full_check)
       // includes indirectly lost blocks!
       //
       lr = lr_array[i];
+      // You could argue that indirect leaks should be counted as errors, but
+      // it seems better to make the counting criteria similar to the printing
+      // criteria.  So we don't count them.
       count_as_error = Unreached == lr->key.state || 
                        Possible  == lr->key.state;
       print_record = is_full_check &&
